deploy: b9f406319e58d709bc7ef6b0bc13521f25c7a7c9

--- a/FM 3883/manifest.json
+++ b/FM 3883/manifest.json
@@ -8,7 +8,9 @@
         ]
     },
     "summary": {
-        "en": []
+        "en": [
+            "The elaborate black dress and hat contain two black pigments (carbon black and bone black) and lead white to achieve the grey tone. Vermilion is mixed with bone black in the sleeves only, and lead-tin yellow is found in the darkest areas of the corset. \nThe miniature is extensively retouched in the face and background, as evidenced by raking light (retouched areas appearing raised), UV (retouching of bright yellowish colour on face, background, ruff and shirt), and X-ray image (the lighter areas in the face corresponding to the use of another pigment on top of the original lead white, and the darker ones in the background corresponding to colour loss). The zinc distribution MA-XRF map identifies zinc white as the modern white pigment used, while the cobalt distribution map highlights the use of cerulean blue (in combination with tin) and smalt (in combination with potassium and nickel).\nA round shape on the dress is evident in the iron and manganese distribution maps, possibly associated with a retouching."
+        ]
     },
     "requiredStatement": {
         "label": {
